# contentshield

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TODO.md  docker-compose.db.yaml  main.py  pyproject.toml  unit_test.ipynb
assets/: experiment.ipynb
contentshield/: model_catalog.py  pyproject.toml  setup_env.sh
contentshield/components/: _search.py
contentshield/components/classifier/: __init__.py
contentshield/components/llms/: alice.py  gpt.py
contentshield/components/tools/: translation.py
contentshield/core/: config.py
contentshield/detector/: base.py  image.py  text.py
contentshield/helpers/: utils.py
contentshield/processor/: pre_processing.py
contentshield/shield/: text.py
contentshield/tools/: text_processing.py  translator.py
docs/: REFERENCE.md  unit_test.ipynb
docs/assets/: experiment.ipynb
scripts/: start_fastapi.sh
src/: __init__.py
src/api/: __init__.py
src/api/routers/: toxic_router.py
src/common/: similarity.py  wrappers.py
src/common/utils/: __init__.py  utils.py
src/core/: setup_lifespan.py
src/modules/: augmentor.py  classifiers.py  searching.py
src/schemas/: base.py  healthcheck.py  toxic_schema.py
src/services/: base.py  toxic_service.py
