[project]
name = "contentshield"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colorlog>=6.9.0",
    "fastapi[standard]>=0.115.8",
    "pydantic-settings>=2.8.0",
    "transformers>=4.49.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true